# api_projetos

./: README.md  pyproject.toml
api_project/: settings.py
